manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-receiver
  annotations:
    image.openshift.io/triggers: |
      [
       {
         "from": {
           "kind": "ImageStreamTag", 
           "name": "webhook-receiver",
         },
         "fieldPath": "spec.template.spec.containers[?(@.name==\"webhook-receiver\")].image", 
         "paused": false
       }
      ]

spec:
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
    spec:
      containers:
        - name: webhook-receiver
          image: webhook-receiver:latest
          ports:
            - name: http
              containerPort: 8080
